# cosmiq5-web

./: .gitignore  README.md  dive_log_findings.md  index.html  pyproject.toml  technical_documentation.md
docs/plans/: 2025-12-16-dive-history-export-design.md
src/cosmiq/: cosmiq_dive_extractor.py  cosmiq_log_parser.py  cosmiq_plotter.py
