[project]
authors = [{name = "Bruno Voigt Hoos", email = "voigt.hoos@gmail.com"}]
dependencies = ["matplotlib"]
name = "cosmiq"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
cosmiq = { path = ".", editable = true }

[tool.pixi.tasks]
